added ValueObject using Reflection to impl equals and hashcode

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.10.19</version>
 		</dependency>
+		<dependency> <!-- Equals and Hashbuilder -->
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
